--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:theme="@style/Theme.TodoAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".AddActivity"
+            android:exported="true" >
+        </activity>
+        <activity
             android:name=".ConfirmDeleteActivity"
             android:exported="false" />
         <activity
@@ -21,13 +25,12 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
 
 </manifest>
