--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,14 @@
         android:theme="@style/Theme.TodoAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".SigunupActivity"
+            android:exported="false" />
+        <activity
             android:name=".EditActivity"
             android:exported="false" />
         <activity
             android:name=".AddActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".ConfirmDeleteActivity"
             android:exported="false" />
